# SenseVoice.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-EN.md  README.md
.devops/: sense-voice-cli-vulkan.Dockerfile
.github/workflows/: build-debug.yaml  build.yaml
cmake/: build-info.cmake
docs/: build.md
examples/: CMakeLists.txt  common-ggml.cc  common-ggml.h  common-sdl.cpp  common-sdl.h
examples/gguf/: CMakeLists.txt
examples/quantize/: CMakeLists.txt  quantize.cc  readme.md
examples/stream/: CMakeLists.txt  stream.cc
examples/zcr_main/: CMakeLists.txt  main.cc
scripts/: convert-pt-to-gguf.py  generate-cmvn.py  generate-fbank-filter.py
sense-voice/: CMakeLists.txt
sense-voice/csrc/: CMakeLists.txt  ThreadPool.h  common.cc  common.h  fftsg.cc  fftsg.cpp  log-mel-filter-bank.h  main.cc  sense-voice-cmvn.h  sense-voice-decoder.cc  sense-voice-decoder.h  sense-voice-encoder.cc  sense-voice-encoder.h  sense-voice-frontend.cc  sense-voice-frontend.h  sense-voice-small.cc  sense-voice-small.h  sense-voice.cc  sense-voice.h  silero-vad.cc  silero-vad.h
